Add bootstrap and fontawesome

--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,9 @@
     "vendor/assets/components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "v4.0.0-alpha.2",
+    "font-awesome": "^4.6.3"
+  }
 }
