Polish styles and add bootstrap 4 as gem

--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "v4.0.0-alpha.2",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "Bootflat": "^2.0.4"
   }
 }
