--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: ruby
 rvm:
   - 2.3.1
+  
+sudo: required
 
 before_install:
   - 'gem install bundler'
   - 'gem install rubocop'
   - 'chmod +x install-rethink-ubuntu.sh &&  sh install-rethink-ubuntu.sh'
   - 'rethinkdb nohup'
-  
+
 before_script:
   - 'mv config/secrets.yml.example config/secrets.yml'
 
