--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,3 +9,15 @@ AllCops:
     - 'db/fixtures/**/*'
     - 'tmp/**/*'
     - 'bin/**/*'
+    - rethinkdb_data/**/*
+    - config/initializers/**/*
+    - config/secrets.*
+
+Metrics/LineLength:
+  Max: 95
+Metrics/AbcSize:
+  Max: 25
+Metrics/MethodLength:
+  Max: 20
+Style/ColonMethodCall:
+  Enabled: false
