Add script to install nodejs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
   - post-test
 
 before_script:
-  - apt-get install -y nodejs
+  - sh ./scripts/install-node.sh
   - gem install bundler         # Bundler is not installed with the image
   - gem install rubocop         # Install rubocop globally
   - bundle install -j $(nproc)  # Install dependencies
