--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ rubocop:
   - docker
 
 rspec:
+  env:
+    - RETHINKDB_URI=rethinkdb://rethinkdb:28015/fireplace_test
   stage: test
   script:
   - bundle exec rspec
