--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,20 @@
 site_name: Fireplace Docs
-theme: readthedocs
+theme: material
+repo_name: 'GitHub'
+repo_url: 'https://github.com/joaoevangelista/fireplace'
+extra:
+  palette:
+    primary: 'amber'
+    accent: 'deep orange'
+  font:
+    text: 'Source Sans Pro'
+    code: 'Source Code Pro'
+  logo: 'images/bonfire.png'
+  author:
+    github: 'joaoevangelista'
+    twitter: 'jaoevangelista'
+markdown_extensions:
+  - admonition
 pages:
 - Home: index.md
 - About: about.md
