--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
   - lint
   - test
   - post-test
+  - docs
 
 before_script:
   - sh ./scripts/install-node.sh
@@ -30,3 +31,16 @@ rspec:
   - bundle exec rspec
   tags:
   - docker
+
+pages:
+  stage: docs
+  script:
+    - sh ./scripts/install-mkdocs.sh
+    - pip install mkdocs-material
+  artifacts:
+    paths:
+      - site
+  only:
+    - pages
+  tags:
+    - docker
