Add build command to pages job on CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,7 @@ pages:
   script:
     - sh ./scripts/install-mkdocs.sh
     - pip install mkdocs-material
+    - mkdocs build
   artifacts:
     paths:
       - site
