Altered build to exclude rails public folder and move the site folder to it since it is required by Pages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,9 +38,11 @@ pages:
     - sh ./scripts/install-mkdocs.sh
     - pip install mkdocs-material
     - mkdocs build
+    - rm -fr public
+    - mv site public
   artifacts:
     paths:
-      - site
+    - public
   only:
     - master
   tags:
